# fastApiUsePoetry

./: memo.txt  pyproject.toml
